--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
       </div>
     </section>
     <!-- End Jumbo section -->
-    @if(searchEnabled){
+    <!-- @if(searchEnabled){ -->
       <section class="content mx-auto pt-8 pb-5 px-4 mx-auto max-w-screen-xl lg:pb-5 lg:pt-16 w-full flex items-center" [ngClass]="isFilterPanelShown ? 'sticky top-[118px] backdrop-blur-sm z-20': 'sticky top-[72px] backdrop-blur-sm z-20'">
         <form class="mx-5 w-full">
           <div class="flex">
@@ -85,7 +85,7 @@
           </div>
         </form>
       </section>
-    }
+    <!-- } -->
 
     <!--<app-how-it-works></app-how-it-works>-->
     <bae-off-featured data-cy="offFeatured"></bae-off-featured>
