--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -35,11 +35,11 @@
 
         <ul class="mt-3 disc">
           <li>
-            <strong>120+</strong>
+            <strong>{{stats?.services}}</strong>
             {{ "dashboard.hero.stats.servicesLabel" | translate }}
           </li>
           <li>
-            <strong>47+</strong>
+            <strong>{{stats?.providers}}</strong>
             {{ "dashboard.hero.stats.providersLabel" | translate }}
           </li>
           <li>
